test/invalid/params.art
enum E { A, B(i32) }
fn f(1) {}
fn g(E::A) {}
fn h(E::B(5)) {}
